--- a/public/bower.json
+++ b/public/bower.json
@@ -23,6 +23,8 @@
     "angular-file-upload": "^2.3.4",
     "angular-ui-router": "^0.3.1",
     "angular-smart-table": "^2.1.8",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "angular-resource": "^1.5.8",
+    "angular-route": "^1.5.8"
   }
 }
